--- a/ProgramToFindParamsWeights/Makefile
+++ b/ProgramToFindParamsWeights/Makefile
@@ -1,2 +1,2 @@
 all:
-	g++ MainProgram.cpp basicClassImplement.cpp weightClassImplement.cpp -o program
+	g++ -g MainProgram.cpp basicClassImplement.cpp weightClassImplement.cpp -o program
